[gd_scene load_steps=4 format=3 uid="uid://b042q6doklcqg"]

[ext_resource type="Script" path="res://Samples/Dodge the creeps/Scripts/enemy_spawner.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dagdg2tgb7cfy" path="res://Samples/Dodge the creeps/Enemy.tscn" id="2"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 3, 1, 0, 0, 0, 0, 481, 1, 0, 0, 0, 0, 478, 723, 0, 0, 0, 0, -2, 722, 0, 0, 0, 0, 3, 1)
}
point_count = 5

[node name="SEnemySpawner" type="Node2D"]
script = ExtResource("1")
enemy = ExtResource("2")

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("1")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(3, 1)

[node name="MobTimer" type="Timer" parent="."]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
